# image-converter

./: .gitignore  CMakeLists.txt  Main.cpp  TestFile.cpp
CMakeModules/: CreateReader.cmake  CreateWriter.cmake
CreationalFabric/: CreationalFabric.hpp
Extra/: PixelExtra.cpp  PixelExtra.hpp
ImageFormats/: ImageFormat.cpp  ImageFormat.hpp
ImageFormats/BMP/: BMP.hpp
ImageFormats/PPM/: PPM.cpp  PPM.hpp
ImagePreparators/: ImagePreparator.hpp
ImagePreparators/PPM/: PPMPreparator.cpp  PPMPreparator.hpp
ImageReaders/: CMakeLists.txt  ImageReader.hpp  ImageReaderRealization.hpp
ImageReaders/BMP/: BMPReader.cpp  BMPReader.hpp
ImageReaders/BMP/BMPDataRowReaders/: BMP8DataRowReader.cpp  BMP8DataRowReader.hpp  BMPDataRowReader.cpp  BMPDataRowReader.hpp
ImageReaders/BMP/BMPParsersFabric/: BMPParsersFabric.cpp  BMPParsersFabric.hpp
ImageReaders/BMP/BMPPixelParsers/: BMPPixelParser.hpp
ImageReaders/BMP/BMPPixelParsers/BMP32PixelParser/: BMP32PixelParser.cpp  BMP32PixelParser.hpp
ImageReaders/BMP/BMPPixelParsers/BMP8PixelParser/: BMP8PixelParser.cpp  BMP8PixelParser.hpp
ImageReaders/BMP/DataParsers/: BMPDataParser.hpp
ImageReaders/BMP/DataParsers/BMP32/: BMP32DataParser.cpp  BMP32DataParser.hpp
ImageReaders/BMP/DataParsers/BMP32DataParser/: BMP32DataParser.cpp
ImageReaders/BMP/DataParsers/BMP8/: BMP8DataParser.cpp  BMP8DataParser.hpp
ImageReaders/BMP/ParsersFabric/: BMPParsersFabric.cpp  BMPParsersFabric.hpp
ImageReaders/CMake/: CreateReader.cmake
ImageReaders/PPM/: CMakeLists.txt  PPMP6Reader.cpp  PPMReader.cpp  PPMReader.hpp
ImageReaders/PPM/DataParsers/: PPMDataParser.hpp
ImageReaders/PPM/DataParsers/P3/: P3DataParser.cpp  P3DataParser.hpp
ImageReaders/PPM/DataParsers/P6/: P6DataParser.cpp  P6DataParser.hpp
ImageReaders/PPMReader/: PPMP6Reader.cpp  PPMP6Reader.hpp  PPMReader.cpp
ImageReaders/ParserFabric/: ParserFabric.hpp
ImageWriters/: CMakeLists.txt  ImagePreparator.hpp  ImageWriter.hpp  ImageWriterRealization.hpp
ImageWriters/PPM/: PPMWriter.cpp  PPMWriter.hpp
ImageWriters/PPM/DataCoders/: PPMDataCoder.hpp
ImageWriters/PPM/DataCoders/P3/: P3DataCoder.cpp  P3DataCoder.hpp
ImageWriters/PPM/DataCoders/P6/: P6DataCoder.cpp  P6DataCoder.hpp
ImageWriters/PPM/ImagePreparator/: PPMPreparator.cpp  PPMPreparator.hpp
ImageWriters/PPMWriter/: PPMWriter.cpp  PPMWriter.hpp
Pixel/: Pixel.cpp  Pixel.hpp
SharedLibLoaders/: SharedLibLoader.hpp
SharedLibLoaders/WindowsLibLoader/: WindowsLibLoader.hpp
